Split Bus model in three based on use case :  - connection point for equipment connection (use static id for macro connect with default bus)  - measurement point for automaton (replace default bus model)  - bus of equipment for omegaref (use equipment id instead of bus id for macro connect)
Signed-off-by: lisrte <laurent.issertial@rte-france.com>